# taipus

./: .gitignore  AGENTS.md
backend/: .env.example  Cargo.toml
backend/locales/: en-US.yml  zh-CN.yml
backend/migrations/mysql/: V202604280001__init_foundation.sql  V202604280002__fix_app_metadata_active_unique_index.sql  V202604280003__create_business_translations.sql  V4__create_hrm_tables.sql  V5__create_tenant_tables.sql  V6__create_auth_tables.sql
backend/migrations/postgres/: V202604280001__init_foundation.sql  V2__fix_app_metadata_active_unique_index.sql  V3__create_business_translations.sql  V4__create_hrm_tables.sql  V5__create_tenant_tables.sql  V6__create_auth_tables.sql
backend/src/: app.rs  lib.rs  main.rs
backend/src/bootstrap/: config.rs  database.rs  migration.rs  mod.rs  tracing.rs
backend/src/config/: mod.rs  settings.rs
backend/src/context/: mod.rs  request_context.rs
backend/src/db/: entity.rs  executor.rs  mod.rs  repository.rs  transaction.rs
backend/src/error/: app_error.rs  error_code.rs  mod.rs
backend/src/health/: handler.rs  mod.rs  route.rs
backend/src/i18n/: business_translation.rs  business_translation_registry.rs  business_translation_repository.rs  handler.rs  locale.rs  mod.rs  route.rs  service.rs  system_resource.rs  time_zone.rs
backend/src/middleware/: access_log.rs  auth.rs  locale.rs  mod.rs  tenant.rs  trace_id.rs
backend/src/modules/: mod.rs
backend/src/response/: api_response.rs  mod.rs  page.rs
backend/src/tests/: fixture.rs  mod.rs
backend/src/utils/: id.rs  mod.rs  (+3 more)
backend/tests/: integration.rs
(+45 files in other folders)
