[package]
name = "taipus-backend"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
dotenvy = "0.15"
http = "1"
pinyin = { version = "0.11", default-features = false, features = ["plain"] }
refinery = { version = "0.8", features = ["mysql", "postgres"] }
rust-i18n = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "postgres", "chrono", "uuid"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
http-body-util = "0.1"
